  * ...this fix was backported from vanilla commit 20167d3421a089a1bf1bd680b150dc69c9506810
  * pax: kconfig DEBUG_PAGEALLOC depends on !PAX_MEMORY_SANITIZE
  * grsec: non-deprecated cpumask accessors
  * kernel: backported ext4 filter_parse() memory fix
  * pax: compile fixes; also in scsi_finish_command
  * pax: loglevel of panic messages
  * pax: unlzma size overflow

 -- mempo <mempo@mempo.org>  Wed, 24 Jun 2015 12:50:00 +0200

linux-image (linux-3.2.69-mempo-0.2.130) UNRELEASED; urgency=medium
  * grsec compile fix
  * grsec warnings in tracing check for balanced ops
  * grsec skb_gso_segment ethtool RTNL/atomic fix
  * v.0.2.130-001-rc
  * changed the build directory real name (readlink) to homesrv from homebig
  * v.0.2.130-002-rc

 -- mempo <mempo@mempo.org>  Wed, 24 Jun 2015 12:50:00 +0200


linux-image (linux-3.2.69-mempo-0.2.129) UNRELEASED; urgency=high
  * grsec fix CVE-2015-1805 privilage! 
  * grsec compat_get_bitmap possible bug
  * grsec -std=gnu89 for HOSTCFLAGS

 -- mempo <mempo@mempo.org>  Tue,  9 Jun 2015 12:00:00 +0200

linux-image (linux-3.2.69-mempo-0.2.128) UNRELEASED; urgency=high
  * grsec linux: lguest memory fix; d_walk() deadlock; UDP flood hang

 -- mempo <mempo@mempo.org>  Tue,  4 Jun 2015 01:25:00 +0200

linux-image (linux-3.2.69-mempo-0.2.127) UNRELEASED; urgency=medium
  * grsec: fix structleak plugin that would disable itself under LTO

 -- mempo <mempo@mempo.org>  Tue, 29 May 2015 10:15:00 +0200

linux-image (linux-3.2.69-mempo-0.2.126) UNRELEASED; urgency=medium
  * grsec: more gcc (5.1?) fixes, re PARAVIRT / RANDSTRUCT

 -- mempo <mempo@mempo.org>  Tue, 19 May 2015 20:30:00 +0200

linux-image (linux-3.2.69-mempo-0.2.125) UNRELEASED; urgency=low
  * grsec: compilation error (ICE) in randstruct - pipacs
  * v0.2.125-001-rc

 -- mempo <mempo@mempo.org>  Sat, 18 May 2015 03:30:00 +0200

linux-image (linux-3.2.69-mempo-0.2.124) UNRELEASED; urgency=high
  * grsec: size overflow false positive squashfs (by Martin Vath)